compiler/tools/fpp-check/test/spec_loc/array_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/array_error.fpp: 1.18
locate type A at "incorrect.fpp"
                 ^
error: incorrect location path [ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/incorrect.fpp
actual location is [ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/array_error.fpp: 2.1
array A = [3] U32
^
